# macro-framework

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  GUIDE.md  LICENSE  MACRO_FRAMEWORK_ROADMAP.md  README.md  analyze_alpha_strategies.py  analyze_conviction_score.py  analyze_drawdowns.py  analyze_flip_conviction.py  analyze_inflation_window.py  analyze_lag_check.py  analyze_mrmi_baseline.py  analyze_mrmi_unified.py  analyze_multi_signal.py  analyze_position_sizing.py  analyze_re_lookback.py  analyze_real_economy_conditioning.py  analyze_seasons_conditioning.py  analyze_walkforward.py  backtest_production.py  build.py  build_report.py  build_v2.py  daily_refresh.sh  generate_brief.py  generate_commentary.py  generate_report_charts.py  index.html  macro_pipeline.py  optimize.py  optimize_drawdown.py  optimize_mrmi.py  optimize_stress.py  presentation.html  pyproject.toml  (+7 more)
.cache/: dashboard.html  dashboard_v2.html
.engineer/: progress.md
agent_docs/: cron_failure_recovery.md  dispatch_runbook.md  repo_map.md  retention.md  secrets.md
docs/: PRESENTATION.html  architecture.md  index.html
migrations/: 0001_init_macro_snapshots.sql  0002_macro_meta.sql  0003_macro_stress_score.sql  0004_macro_top_brief.sql  0005_macro_backtest.sql
outputs/: dashboard-preview.html  dashboard.html
report/: README.md  build_report.py  generate_report_charts.py
reports/: backtest-2026-05-20-aligned.txt  backtest-2026-05-20-canonical-check.md  backtest-2026-05-20.txt  macro_update_2026_05.html  macro_update_2026_05_18.html  task-34-phase1-grid-all-rows.csv  task-34-stress-unification-backtest.md  task-35-investor-grade-thresholds.md
research/: README.md  analyze_alpha_strategies.py  analyze_drawdowns.py  analyze_flip_conviction.py  analyze_inflation_window.py  analyze_lag_check.py  analyze_mrmi_baseline.py  analyze_mrmi_unified.py  analyze_multi_signal.py  analyze_position_sizing.py  analyze_re_lookback.py  analyze_real_economy_conditioning.py  analyze_walkforward.py
scripts/: build_preview.py  com.milkroad.macro-framework-docs-serve.plist  com.milkroad.macro-framework-serve.plist  com.milkroad.macro-refresh-daily.plist  com.milkroad.macro-refresh.plist  refresh-if-et-time.sh  refresh.sh  setup-mac-mini.sh  tuesday.sh
snapshots/: 2026-04-15.json  2026-04-16.json  2026-04-17.json  2026-04-20.json  2026-04-27.json  2026-04-30.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-18.json  2026-05-19.json  2026-05-20.json  2026-05-21.json  2026-05-22.json  2026-05-23.json  2026-05-25.json  2026-05-26.json  2026-05-27.json  2026-05-28.json  2026-05-29.json  2026-06-01.json  2026-06-02.json  2026-06-03.json  2026-06-04.json  2026-06-05.json  2026-06-08.json  2026-06-10.json  (+44 more)
(+114 files in other folders)
