[project]
name = "macro-framework"
version = "0.0.0"
description = "Macro regime dashboard and MRMI pipeline"
requires-python = ">=3.11"
dependencies = [
    "yfinance==1.2.1",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "requests==2.33.1",
    "matplotlib==3.10.8",
    "supabase==2.30.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "pyright>=1.1",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"analyze_*.py" = ["B007", "E701", "E741", "F841", "SIM108"]
"optimize*.py" = ["B007", "E701", "F841", "SIM108", "SIM401"]
"robustness.py" = ["E701"]
"validate_optimized.py" = ["E701"]
"build.py" = ["E701", "E731", "F403", "F405", "F841", "SIM401"]
"build_report.py" = ["B007"]
"generate_report_charts.py" = ["B905"]
"macro_pipeline.py" = ["B905", "E701", "SIM108"]
"sync_to_supabase.py" = ["E402"]
"test_sync_to_supabase.py" = ["E402"]
"weekly_briefs.py" = ["E731", "E741"]

[tool.pyright]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportGeneralTypeIssues = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
